Add json files, Config values