@@ -8,6 +8,7 @@ import com.google.protobuf.ByteString;
 import io.github.cdimascio.dotenv.Dotenv;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.hse.brina.Config;
 
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -22,36 +23,28 @@ public class SpeechRecognition {
     private static final Logger logger = LogManager.getLogger();
 
     private SpeechSettings downloadSettings() throws IOException {
-        Dotenv dotenv = Dotenv.configure().directory("./.env").load();
-
-        String projectId = dotenv.get("PROJECT_ID");
-        String privateKeyId = dotenv.get("PRIVATE_KEY_ID");
-        String privateKey = dotenv.get("PRIVATE_KEY");
-        String clientEmail = dotenv.get("CLIENT_EMAIL");
-        String clientId = dotenv.get("CLIENT_ID");
-        String clientCertUrl = dotenv.get("CLIENT_CERT_URL");
-
-        String credentialsJson = String.format("{" +
-                "\"type\": \"service_account\"," +
-                "\"project_id\": \"%s\"," +
-                "\"private_key_id\": \"%s\"," +
-                "\"private_key\": \"%s\"," +
-                "\"client_email\": \"%s\"," +
-                "\"client_id\": \"%s\"," +
-                "\"auth_uri\": \"https://accounts.google.com/o/oauth2/auth\"," +
-                "\"token_uri\": \"https://oauth2.googleapis.com/token\"," +
-                "\"auth_provider_x509_cert_url\": \"https://www.googleapis.com/oauth2/v1/certs\"," +
-                "\"client_x509_cert_url\":  \"%s\"" +
-                "}", projectId, privateKeyId, privateKey, clientEmail, clientId, clientCertUrl);
-
-        Path tempDir = Files.createTempDirectory("temp");
-        Path tempCredentialsFile = Paths.get(tempDir.toString(), "credentials.json");
-        Files.write(tempCredentialsFile, credentialsJson.getBytes());
-
-        return SpeechSettings.newBuilder()
-                .setCredentialsProvider(FixedCredentialsProvider.create(ServiceAccountCredentials.fromStream(new FileInputStream(tempCredentialsFile.toString()))))
-                .setEndpoint("speech.googleapis.com:443")
-                .build();
+        Path credentialsFilePath = Paths.get(Config.getProjectPath() + "/src/main/resources/org/hse/brina/integrations/google-credentials.json");
+        String credentialsJson = Files.readString(credentialsFilePath);
+        if (credentialsJson.contains("[")) {
+            Dotenv dotenv = Dotenv.configure().directory("./.env").load();
+            String projectId = dotenv.get("PROJECT_ID");
+            String privateKeyId = dotenv.get("PRIVATE_KEY_ID");
+            String privateKey = dotenv.get("PRIVATE_KEY");
+            String clientEmail = dotenv.get("CLIENT_EMAIL");
+            String clientId = dotenv.get("CLIENT_ID");
+            String clientCertUrl = dotenv.get("CLIENT_CERT_URL");
+            if (projectId != null && privateKeyId != null && privateKey != null && clientEmail != null && clientId != null && clientCertUrl != null) {
+                credentialsJson = credentialsJson.replace("[PROJECT_ID]", projectId).replace("[PRIVATE_KEY_ID]", privateKeyId).replace("[PRIVATE_KEY]", privateKey).replace("[CLIENT_EMAIL]", clientEmail).replace("[CLIENT_ID]", clientId).replace("[CLIENT_CERT_URL]", clientCertUrl);
+            } else {
+                logger.error("Not all dotenv values are loaded");
+            }
+        }
+        try {
+            Files.write(credentialsFilePath, credentialsJson.getBytes());
+        } catch (IOException e) {
+            System.err.println("Error while writing in file: " + e.getMessage());
+        }
+        return SpeechSettings.newBuilder().setCredentialsProvider(FixedCredentialsProvider.create(ServiceAccountCredentials.fromStream(new FileInputStream(credentialsFilePath.toString())))).setEndpoint("speech.googleapis.com:443").build();
     }
 
     public String translateAudioToText(String path) {
@@ -75,7 +68,6 @@ public class SpeechRecognition {
                 RecognitionConfig config = RecognitionConfig.newBuilder().setEncoding(encoding).setSampleRateHertz(16000).setLanguageCode("ru-RU").build();
                 RecognizeResponse response = speechClient.recognize(config, audio);
                 List<SpeechRecognitionResult> results = response.getResultsList();
-
                 for (SpeechRecognitionResult result : results) {
                     SpeechRecognitionAlternative alternative = result.getAlternativesList().get(0);
                     textResult.append(alternative.getTranscript());
